--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
         </ul>
         <ul class="main_nav clearfix">
           <li><a href="index.html">HOME</a></li>
-          <li><a href="we_are.html">WE ARE</a></li>
-          <li><a href="work.html">WORK</a></li>
-          <li><a href="blog.html">BLOG</a></li>
-          <li><a href="contact_us.html">CONTACT US</a></li>
+          <li><a href="#">WE ARE</a></li>
+          <li><a href="#">WORK</a></li>
+          <li><a href="#">BLOG</a></li>
+          <li><a href="#">CONTACT US</a></li>
         </ul>
       </nav>
     </header>
